{
  "version": 4,
  "terraform_version": "1.5.6",
  "serial": 220,
  "lineage": "2cd768f4-300e-ffdb-6518-72ddb2f6b045",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "PostgreSQL",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/9802cca1-3c80-4b5f-b794-4bcc0296f4e4/resourceGroups/terraform-rg/providers/Microsoft.Network/networkInterfaces/PostgreSQL-nic",
            "internal_domain_name_suffix": "reb11fgb0h2ephyf50fiyunjof.ax.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "PostgreSQL-ip-config",
                "primary": true,
                "private_ip_address": "10.0.1.5",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/9802cca1-3c80-4b5f-b794-4bcc0296f4e4/resourceGroups/terraform-rg/providers/Microsoft.Network/publicIPAddresses/PostgreSQLPostgreSQL-ip",
                "subnet_id": "/subscriptions/9802cca1-3c80-4b5f-b794-4bcc0296f4e4/resourceGroups/terraform-rg/providers/Microsoft.Network/virtualNetworks/myTFVnet/subnets/web-subnet"
              }
            ],
            "location": "westeurope",
            "name": "PostgreSQL-nic",
            "private_ip_address": "10.0.1.5",
            "private_ip_addresses": [
              "10.0.1.5"
            ],
            "resource_group_name": "terraform-rg"
          },
          "dependencies": [
            "azurerm_public_ip.PostgreSQL",
            "azurerm_resource_group.rg",
            "azurerm_subnet.web-subnet",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "flask",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/9802cca1-3c80-4b5f-b794-4bcc0296f4e4/resourceGroups/terraform-rg/providers/Microsoft.Network/networkInterfaces/flask-nic",
            "internal_domain_name_suffix": "reb11fgb0h2ephyf50fiyunjof.ax.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "flask-ip-config",
                "primary": true,
                "private_ip_address": "10.0.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/9802cca1-3c80-4b5f-b794-4bcc0296f4e4/resourceGroups/terraform-rg/providers/Microsoft.Network/publicIPAddresses/flask-ip",
                "subnet_id": "/subscriptions/9802cca1-3c80-4b5f-b794-4bcc0296f4e4/resourceGroups/terraform-rg/providers/Microsoft.Network/virtualNetworks/myTFVnet/subnets/web-subnet"
              }
            ],
            "location": "westeurope",
            "name": "flask-nic",
            "private_ip_address": "10.0.1.4",
            "private_ip_addresses": [
              "10.0.1.4"
            ],
            "resource_group_name": "terraform-rg"
          },
          "dependencies": [
            "azurerm_public_ip.flask",
            "azurerm_resource_group.rg",
            "azurerm_subnet.web-subnet",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "db_nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/9802cca1-3c80-4b5f-b794-4bcc0296f4e4/resourceGroups/terraform-rg/providers/Microsoft.Network/networkSecurityGroups/db_nsg",
            "location": "westeurope",
            "name": "db_nsg",
            "resource_group_name": "terraform-rg",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "AllowSSH",
                "priority": 100,
                "protocol": "*",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "5432",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "AllowAppAccess",
                "priority": 110,
                "protocol": "*",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "web_nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/9802cca1-3c80-4b5f-b794-4bcc0296f4e4/resourceGroups/terraform-rg/providers/Microsoft.Network/networkSecurityGroups/web_nsg",
            "location": "westeurope",
            "name": "web_nsg",
            "resource_group_name": "terraform-rg",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "AllowSSH",
                "priority": 110,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "8080",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "AllowHTTP",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "PostgreSQL",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "id": "/subscriptions/9802cca1-3c80-4b5f-b794-4bcc0296f4e4/resourceGroups/terraform-rg/providers/Microsoft.Network/publicIPAddresses/PostgreSQLPostgreSQL-ip",
            "idle_timeout_in_minutes": 4,
            "ip_version": "IPv4",
            "location": "westeurope",
            "name": "PostgreSQLPostgreSQL-ip",
            "resource_group_name": "terraform-rg",
            "sku": "Basic",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "flask",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "id": "/subscriptions/9802cca1-3c80-4b5f-b794-4bcc0296f4e4/resourceGroups/terraform-rg/providers/Microsoft.Network/publicIPAddresses/flask-ip",
            "idle_timeout_in_minutes": 4,
            "ip_version": "IPv4",
            "location": "westeurope",
            "name": "flask-ip",
            "resource_group_name": "terraform-rg",
            "sku": "Basic",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "db-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.2.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/9802cca1-3c80-4b5f-b794-4bcc0296f4e4/resourceGroups/terraform-rg/providers/Microsoft.Network/virtualNetworks/myTFVnet/subnets/db-subnet",
            "name": "db-subnet",
            "resource_group_name": "terraform-rg",
            "virtual_network_name": "myTFVnet"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "web-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.1.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/9802cca1-3c80-4b5f-b794-4bcc0296f4e4/resourceGroups/terraform-rg/providers/Microsoft.Network/virtualNetworks/myTFVnet/subnets/web-subnet",
            "name": "web-subnet",
            "resource_group_name": "terraform-rg",
            "virtual_network_name": "myTFVnet"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "94bd0389-d1c1-47f8-9f05-fe8a8c51a975",
            "id": "/subscriptions/9802cca1-3c80-4b5f-b794-4bcc0296f4e4/resourceGroups/terraform-rg/providers/Microsoft.Network/virtualNetworks/myTFVnet",
            "location": "westeurope",
            "name": "myTFVnet",
            "resource_group_name": "terraform-rg"
          },
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    }
  ]
}